@@ -19,7 +19,7 @@
 <FONT SIZE="5"><STRONG>Available Localizations</STRONG></FONT>
 <BR><BR>
 
-<STRONG>Simplified Chinese (简体中文) for 0.9.0</STRONG> 9/29/2006<BR>
+<STRONG>Simplified Chinese (简体中文) for 0.9.0</STRONG> 10/4/2006<BR>
 Download Link: <a href="localizations/zh_CN.zip">here</a>
 <BR><BR>
 
